@@ -340,16 +340,16 @@ CONFIG_EXAMPLE_NETTEST_CLIENTIP=(192<<24|168<<16|0<<8|106)
 
 #
 # Settings for examples/nsh
-CONFIG_EXAMPLES_NSH_CONSOLE=y
-CONFIG_EXAMPLES_NSH_TELNET=n
-CONFIG_EXAMPLES_NSH_IOBUFFER_SIZE=512
-CONFIG_EXAMPLES_NSH_CMD_SIZE=40
-CONFIG_EXAMPLES_NSH_STACKSIZE=4096
-CONFIG_EXAMPLES_NSH_DHCPC=n
-CONFIG_EXAMPLES_NSH_NOMAC=n
-CONFIG_EXAMPLES_NSH_IPADDR=(10<<24|0<<16|0<<8|2)
-CONFIG_EXAMPLES_NSH_DRIPADDR=(10<<24|0<<16|0<<8|1)
-CONFIG_EXAMPLES_NSH_NETMASK=(255<<24|255<<16|255<<8|0)
+CONFIG_NSH_CONSOLE=y
+CONFIG_NSH_TELNET=n
+CONFIG_NSH_IOBUFFER_SIZE=512
+CONFIG_NSH_CMD_SIZE=40
+CONFIG_NSH_STACKSIZE=4096
+CONFIG_NSH_DHCPC=n
+CONFIG_NSH_NOMAC=n
+CONFIG_NSH_IPADDR=(10<<24|0<<16|0<<8|2)
+CONFIG_NSH_DRIPADDR=(10<<24|0<<16|0<<8|1)
+CONFIG_NSH_NETMASK=(255<<24|255<<16|255<<8|0)
 
 #
 # Stack and heap information
