@@ -341,16 +341,45 @@ CONFIG_EXAMPLE_NETTEST_CLIENTIP=(192<<24|168<<16|0<<8|106)
 #
 # Settings for apps/nshlib
 #
-CONFIG_EXAMPLES_NSH_CONSOLE=y
-CONFIG_EXAMPLES_NSH_TELNET=n
-CONFIG_EXAMPLES_NSH_IOBUFFER_SIZE=512
-CONFIG_EXAMPLES_NSH_CMD_SIZE=40
-CONFIG_EXAMPLES_NSH_STACKSIZE=4096
-CONFIG_EXAMPLES_NSH_DHCPC=n
-CONFIG_EXAMPLES_NSH_NOMAC=n
-CONFIG_EXAMPLES_NSH_IPADDR=(192<<24|168<<16|10<<8|2)
-CONFIG_EXAMPLES_NSH_DRIPADDR=(192<<24|168<<16|10<<8|1)
-CONFIG_EXAMPLES_NSH_NETMASK=(255<<24|255<<16|255<<8|0)
+# CONFIG_NSH_FILEIOSIZE - Size of a static I/O buffer
+# CONFIG_NSH_STRERROR - Use strerror(errno)
+# CONFIG_NSH_LINELEN - Maximum length of one command line
+# CONFIG_NSH_STACKSIZE - Stack size to use for new threads.
+# CONFIG_NSH_NESTDEPTH - Max number of nested if-then[-else]-fi
+# CONFIG_NSH_DISABLESCRIPT - Disable scripting support
+# CONFIG_NSH_DISABLEBG - Disable background commands
+# CONFIG_NSH_ROMFSETC - Use startup script in /etc
+# CONFIG_NSH_CONSOLE - Use serial console front end
+# CONFIG_NSH_TELNET - Use telnetd console front end
+#
+# If CONFIG_NSH_TELNET is selected:
+# CONFIG_NSH_IOBUFFER_SIZE -- Telnetd I/O buffer size
+# CONFIG_NSH_DHCPC - Obtain address using DHCP
+# CONFIG_NSH_IPADDR - Provides static IP address
+# CONFIG_NSH_DRIPADDR - Provides static router IP address
+# CONFIG_NSH_NETMASK - Provides static network mask
+# CONFIG_NSH_NOMAC - Use a bogus MAC address
+#
+# If CONFIG_NSH_ROMFSETC is selected:
+# CONFIG_NSH_ROMFSMOUNTPT - ROMFS mountpoint
+# CONFIG_NSH_INITSCRIPT - Relative path to init script
+# CONFIG_NSH_ROMFSDEVNO - ROMFS RAM device minor
+# CONFIG_NSH_ROMFSSECTSIZE - ROMF sector size
+# CONFIG_NSH_FATDEVNO - FAT FS RAM device minor
+# CONFIG_NSH_FATSECTSIZE - FAT FS sector size
+# CONFIG_NSH_FATNSECTORS - FAT FS number of sectors
+# CONFIG_NSH_FATMOUNTPT - FAT FS mountpoint
+#
+CONFIG_NSH_CONSOLE=y
+CONFIG_NSH_TELNET=n
+CONFIG_NSH_IOBUFFER_SIZE=512
+CONFIG_NSH_CMD_SIZE=40
+CONFIG_NSH_STACKSIZE=4096
+CONFIG_NSH_DHCPC=n
+CONFIG_NSH_NOMAC=n
+CONFIG_NSH_IPADDR=(192<<24|168<<16|10<<8|2)
+CONFIG_NSH_DRIPADDR=(192<<24|168<<16|10<<8|1)
+CONFIG_NSH_NETMASK=(255<<24|255<<16|255<<8|0)
 
 #
 # Stack and heap information
